--- a/src/main/resources/templates/projet.html
+++ b/src/main/resources/templates/projet.html
@@ -9,28 +9,28 @@
     <meta content="" name="description">
 
     <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="img/icons/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/icons/114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/icons/72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="img/icons/default.png">
+    <link rel="shortcut icon" href="../img/icons/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../img/icons/114x114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../img/icons/72x72.png">
+    <link rel="apple-touch-icon-precomposed" href="../img/icons/default.png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900" rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/owl.theme.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/owl.transitions.min.css" rel="stylesheet">
+    <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../lib/owlcarousel/owl.carousel.min.css" rel="stylesheet">
+    <link href="../lib/owlcarousel/owl.theme.min.css" rel="stylesheet">
+    <link href="../lib/owlcarousel/owl.transitions.min.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
     <!--Your custom colour override - predefined colours are: colour-blue.css, colour-green.css, colour-lavander.css, orange is default-->
-    <link href="css/colour-green.css" id="colour-scheme" rel="stylesheet">
+    <link href="../css/colour-green.css" id="colour-scheme" rel="stylesheet">
 
 </head>
 
@@ -42,9 +42,9 @@
       <div class="block-contained">
           <h1 class="h-lg m-t-0 m-b-lg text-shadow-grey">
               <td th:text="${projet.nom}"></td>
-              <a class="btn btn-more" data-toggle="modal" data-target="#ajoutertache"><i class="fa fa-plus"></i>Ajouter une tâche</a>
+              <a data-toggle="modal" data-target="#ajoutertache" class="btn btn-more"><i class="fa fa-plus"></i>Ajouter une tâche</a>
           </h1>
-            <form action="#" th:action="@{/index}" method="post "><button>Index</button></form>
+            <!--<form action="#" th:action="@{/index}" method="get"><button>Index</button></form>-->
           <!--Modal-->
           <div class="modal fade" id="ajoutertache" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
@@ -112,58 +112,6 @@
                       </div>
                   </div>
               </div>
-              <!--<div class="col-md-3 text-center">
-                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
-                      <div class="panel-heading">
-                          <h4 class="panel-title">
-                              Tâche 2
-                          </h4>
-                      </div>
-                      <div class="panel-pricing-price">Faire le ménage</div>
-                      <div class="panel-body">
-                          <ul class="list-dotted">
-                              <li>Luc</li>
-                              <li>Eliane</li>
-                          </ul>
-                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-3 text-center">
-                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
-                      <div class="panel-heading">
-                          <h4 class="panel-title">
-                              Tâche 3
-                          </h4>
-                      </div>
-                      <div class="panel-pricing-price">Faire les courses</div>
-                      <div class="panel-body">
-                          <ul class="list-dotted">
-                              <li>Paul</li>
-                              <li>Henri</li>
-                              <li>Benoit</li>
-                          </ul>
-                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-3 text-center">
-                  <div class="panel panel-default panel-pricing panel-pricing-highlighted text-center">
-                      <div class="panel-heading">
-                          <h4 class="panel-title">
-                              Tâche 4
-                          </h4>
-                      </div>
-                      <div class="panel-pricing-price">Faire le front su site web</div>
-                      <div class="panel-body">
-                          <ul class="list-dotted">
-                              <li>Eliane</li>
-                              <li>Bob</li>
-                          </ul>
-                          <a data-toggle="modal" data-target="#modifier" class="btn btn-primary btn-sm">Modifier</a>
-                      </div>
-                  </div>
-              </div>-->
           </div>
       </div>
   </div>
@@ -189,22 +137,22 @@
   </div>
 
   <!-- Required JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/stellar/stellar.min.js"></script>
-  <script src="lib/waypoints/waypoints.min.js"></script>
-  <script src="lib/counterup/counterup.min.js"></script>
-  <script src="contactform/contactform.js"></script>
+  <script src="../lib/jquery/jquery.min.js"></script>
+  <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="../lib/stellar/stellar.min.js"></script>
+  <script src="../lib/waypoints/waypoints.min.js"></script>
+  <script src="../lib/counterup/counterup.min.js"></script>
+  <script src="../contactform/contactform.js"></script>
 
   <!-- Template Specisifc Custom Javascript File -->
-  <script src="js/custom.js"></script>
+  <script src="../js/custom.js"></script>
 
   <!--Custom scripts demo background & colour switcher - OPTIONAL -->
-  <script src="js/color-switcher.js"></script>
+  <script src="../js/color-switcher.js"></script>
 
   <!--Contactform script -->
-  <script src="contactform/contactform.js"></script>
+  <script src="../contactform/contactform.js"></script>
 
 </body>
 
