--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
     <div class="mission text-center block block-pd-sm block-bg-noise">
       <div class="container">
         <h2 class="text-shadow-white">
-            Dashboard
+            Dashboard de <td th:text="${user.firstName}"></td>
             <a data-toggle="modal" data-target="#ajouterprojet" class="btn btn-more"><i class="fa fa-plus"></i>Ajouter un projet</a>
           </h2>
 
