affichage + ptit bugg réglé

--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -28,7 +28,7 @@
   <link href="../lib/owlcarousel/owl.transitions.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="../static/css/style.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 
   <!--Your custom colour override - predefined colours are: colour-blue.css, colour-green.css, colour-lavander.css, orange is default-->
   <link href="../css/colour-green.css" id="colour-scheme" rel="stylesheet">
@@ -78,6 +78,7 @@
                   <div class="text-right modal-footer">
                     <button type="submit" class="btn btn-lg btn-primary btn-block">S'incrire</button>
                   </div>
+                  <div><td th:text="${messEr}"></td></div>
                 </fieldset>
               </form>
             </div>
