--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
   <link href="../lib/owlcarousel/owl.transitions.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="../static/css/style.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 
   <!--Your custom colour override - predefined colours are: colour-blue.css, colour-green.css, colour-lavander.css, orange is default-->
   <link href="../css/colour-green.css" id="colour-scheme" rel="stylesheet">
@@ -66,14 +66,13 @@
                       <input th:field="*{password}" type="password" class="form-control" placeholder="Password">
                     </div>
                   </div>
+                  <div><td th:text="${messEr}"></td></div>
                   <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
                 </fieldset>
               </form>
               <div>
                 <form action="#" th:action="@{/inscription}" method="get">
-                  <button>
-                    S'inscrire
-                  </button>
+                  <button>S'inscrire</button>
                 </form >
               </div>
             </div>
