--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -35,17 +35,9 @@
 
 </head>
 
-<!-- ======== @Region: body ======== -->
-
 <body class="fullscreen-centered page-login">
-  <!--Change the background class to alter background image, options are: benches, boots, buildings, city, metro -->
-
-
-    <!-- ======== @Region: #content ======== -->
     <div id="content">
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-          <div class="panel panel-default">
+      <div class="row panel panel-default col-sm-6 col-sm-offset-3">
             <div class="panel-heading">
               <h3 class="panel-title">
                   Inscription
@@ -83,9 +75,6 @@
               </form>
             </div>
           </div>
-        </div>
-      </div>
-      <!-- /row -->
     </div>
 
   <!-- Required JavaScript Libraries -->
@@ -94,14 +83,10 @@
   <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="../lib/stellar/stellar.min.js"></script>
   <script src="../lib/waypoints/waypoints.min.js"></script>
-  <script src="../lib/counterup/counterup.min.js"></script>
   <script src="../contactform/contactform.js"></script>
 
   <!-- Template Specisifc Custom Javascript File -->
   <script src="../js/custom.js"></script>
-
-  <!--Custom scripts demo background & colour switcher - OPTIONAL -->
-  <script src="../js/color-switcher.js"></script>
 
   <!--Contactform script -->
   <script src="../contactform/contactform.js"></script>
